SERVER-81616 Fix NamespaceString with DatabaseName constructor